src/objects/OAuth_Connection__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Access_Token_URL__c</fullName>
        <label>Access Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Authorization_URL__c</fullName>
        <label>Authorization URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Token_URL__c</fullName>
        <label>Request Token URL</label>
        <type>Url</type>
    </fields>
    <label>OAuth Connection</label>
</CustomObject>